--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website FF Beta por</title>
+    <title>HAMIM URIP, MADI GIMANG</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,16 +14,24 @@
             color: #333;
         }
         a {
-            font-size: 20px;
-            color: blue;
-            text-decoration: underline;
+            display: inline-block;
+            font-size: 18px;
+            color: white;
+            background-color: blue;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 20px;
+        }
+        a:hover {
+            background-color: darkblue;
         }
     </style>
 </head>
 <body>
 
-    <h1>Website FF Beta</h1>
-    <a href="https://ff-beta-testing.id.modfyp.com/" target="_blank">FF Beta</a>
+    <h1>HAMIM URIP, MADI GIMANG</h1>
+    <a href="https://ff-beta-testing.id.modfyp.com/" target="_blank">DOWNLOAD FF BETA</a>
 
 </body>
 </html>
